Closed Bug 1607749 Opened 4 years ago Closed 4 years ago

FTP authentication dialog box is not displayed

Categories

(Core Graveyard :: Networking: FTP, defect, P1)

defect

Tracking

(firefox-esr68 unaffected, firefox72 disabled, firefox73 verified, firefox74 verified)

VERIFIED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 --- disabled
firefox73 --- verified
firefox74 --- verified

People

(Reporter: tbabos, Assigned: mattwoodrow)

References

(Regression, )

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(2 files)

Attached image Console Log

Affected versions
Nightly 74.0a1 (2020-01-07) (64-bit)
Beta 73.0b2 (64-bit

Affected platforms
Windows 10 x64
Mac OS 10.14
Ubuntu 18.04

Steps to reproduce

  1. Launch Firefox
  2. Go to ftp://demo.wftpserver.com/

Expected result
The authentication dialog box should've been displayed

Actual Result
FTP authentication dialog box is not displayed

Note
Works fine in Release 71.0 (64-bit) and Beta 72

Regression-Range
This started happening sometime after 2019/11/08, wider pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=7748cc7e9b63d86a40eb4799c0830172da579c84&tochange=f414b9e6d85710f92649566c1c6511265dadd476

Couldn't find the right issue due to 2 different wrong behaviors:

  • the download prompt will appear after accessing ftp://demo.wftpserver.com - happened during mozregression process
  • the page remains blank, there is no authentication dialog displayed - always reproducible in latest Nightly 74 and Beta 73

Tentatively looking at Bug 1594166 as a possible regressor, not sure about it so leaving "Regressed by" field blank.

Browser Console Log:
See attached screenshot

This should be wontfixed, nobody has complained so far, right? This edge case regression is about transmitting a password over an unencrypted connection of a protocol that is removed from web browsers this year (bug 1574475).
(Disabled in Chrome 81 together with TLS 1.0+1.1, and removed with 82 in Q2 - assumingly in response to this request)
FileZilla or the system's file manager could be used for this, they must be used anyway when support for unencrypted ftp gets removed this year.
As TLS should be used for protection, here is an ftps:// tutorial for vsftpd and https:// tutorial for nginx: bug 1593595 comment 2

Junior what do you think? On one hand ftp is going away, on the other hand it's a regression.

Status: NEW → RESOLVED
Closed: 4 years ago
Flags: needinfo?(juhsu)
Resolution: --- → FIXED

Workaround: Directly open ftp://demo-user:demo-user@demo.wftpserver.com until support for unencrypted ftp is removed.

Reopening pending the reply to comment 2. FIXED doesn't seem like the right resolution either way - we should call this bug WONTFIX if that's the direction we decide to go.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → UNCONFIRMED
Ever confirmed: false
Regressed by: 1594166
Has Regression Range: --- → yes

(In reply to Andy Grover [:grover] from comment #2)

Junior what do you think? On one hand ftp is going away, on the other hand it's a regression.

It looks bad.
Here's a shorter regression range:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=ac63c8962183502a4b0ec32222efc67d3841d157&tochange=dff542b772e590137a2e3d9785f5c32878f256f1

Could you take a look since it could be a regression of bug 1594166, Matt?
It's easy to reproduce.

However, if document channel enabling for all channels is after ftp sunset, it might be WONTFIX.
cc Nhi to aware this

Flags: needinfo?(juhsu) → needinfo?(matt.woodrow)
Priority: -- → P1
Whiteboard: [necko-triaged]
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)

I think this is a confirmed issue.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7c45dbfe789e
Supporting querying an nsIAuthPrompt from ParentChannelListener. r=dragana
Status: NEW → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74

This issue was fixed in Nightly v74.0a1 from 2020-01-10 on Windows 10 and Ubuntu 18. Tha authentification prompt is now displayed when loading that link.

Status: RESOLVED → VERIFIED

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(matt.woodrow)

Comment on attachment 9119631 [details]
Bug 1607749 - Supporting querying an nsIAuthPrompt from ParentChannelListener. r?dragana

Beta/Release Uplift Approval Request

  • User impact if declined: No authentication dialog presented for ftp connection
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Super low risk, just provides the authentication service to the new DocumentChannel connection logic.
  • String changes made/needed: None
Flags: needinfo?(matt.woodrow)
Attachment #9119631 - Flags: approval-mozilla-beta?

Comment on attachment 9119631 [details]
Bug 1607749 - Supporting querying an nsIAuthPrompt from ParentChannelListener. r?dragana

Fixes a regression causing a missing FTP authentication dialog. Approved for 73.0b4.

Attachment #9119631 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

I have also verified this fix in Beta v73.0b4 on Windows 10 and Ubuntu 18.

Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: