Bug 1607749 - Supporting querying an nsIAuthPrompt from ParentChannelListener. r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D59266